src/objects/Target_Price__c.object
<CustomObject>
    <description>Custom object used to define different tier and bucket pricing with Steelbrick</description>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Rate_Adjustment__c</fullName>
        <label>Growth Rate Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MInimum_Price__c</fullName>
        <label>MInimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_AOV__c</fullName>
        <label>Max AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_AOV__c</fullName>
        <label>Min AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Order_Percent__c</fullName>
        <label>Min Order %</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Total__c</fullName>
        <label>Percent of Total</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Prices</relationshipLabel>
        <relationshipName>Target_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Target Price</label>
    <nameField>
        <label>Target Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>